# FCR_Analyzer

./: README.md  app.py  main.py  pyproject.toml  sc_task.xlsx  sc_task_mini.xlsx  sc_task_mini_2.xlsx
.ipynb_checkpoints/: app-checkpoint.py
